PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure__c</fullName>
    <label>Infrastructure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Social - Education</fullName>
            </value>
            <value>
                <fullName>Social - Health Care</fullName>
            </value>
            <value>
                <fullName>Social - Justice</fullName>
            </value>
            <value>
                <fullName>Social - Public Housing</fullName>
            </value>
            <value>
                <fullName>Social - Long-Term Care</fullName>
            </value>
            <value>
                <fullName>Transportation - Toll Roads</fullName>
            </value>
            <value>
                <fullName>Transportation - Bridges</fullName>
            </value>
            <value>
                <fullName>Transportation - Tunnels</fullName>
            </value>
            <value>
                <fullName>Transportation - Highways</fullName>
            </value>
            <value>
                <fullName>Transportation - Airports</fullName>
            </value>
            <value>
                <fullName>Transportation - Ports</fullName>
            </value>
            <value>
                <fullName>Transportation - Rail</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Energy - Renewable Energy</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Energy - Conventional Energy</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Energy - Energy Distribution</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Energy - Energy Transmission</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Energy - Water/Wastewater</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Energy - Street Lighting</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Energy - Energy Storage</fullName>
            </value>
            <value>
                <fullName>Communications - Towers and Transmission</fullName>
            </value>
            <value>
                <fullName>Communications - Cable Networks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>