PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Investment_Thesis__c.field-meta.xml
<CustomField>
    <fullName>Investment_Thesis__c</fullName>
    <label>Investment Thesis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>