PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Investment_Vehicle_Status__c.field-meta.xml
<CustomField>
    <fullName>Investment_Vehicle_Status__c</fullName>
    <description>Copy of the Investment Vehicle Status</description>
    <formula>TEXT(Investment_Vehicle__r.Status__c)</formula>
    <inlineHelpText>Copy of the Investment Vehicle Status</inlineHelpText>
    <label>Investment Vehicle Status</label>
    <type>Text</type>
</CustomField>