PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <formula>TEXT ( Account.Jurisdiction__c )</formula>
    <label>Jurisdiction</label>
    <type>Text</type>
</CustomField>