PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/LastCallVoicemailDate__c.field-meta.xml
<CustomField>
    <fullName>LastCallVoicemailDate__c</fullName>
    <label>Last Call/Voicemail Date</label>
    <type>Date</type>
</CustomField>