PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Launch_Date_Comments__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date_Comments__c</fullName>
    <label>Launch Date Comments</label>
    <type>TextArea</type>
</CustomField>