PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BPAL</fullName>
            </value>
            <value>
                <fullName>BFREL</fullName>
            </value>
            <value>
                <fullName>BFREGG</fullName>
            </value>
            <value>
                <fullName>BFS US</fullName>
            </value>
            <value>
                <fullName>BFREG NY</fullName>
            </value>
            <value>
                <fullName>BFS LP</fullName>
            </value>
            <value>
                <fullName>BFREG LP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>