PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <description>Legal name from sub doc to be entered while closing the opportunity</description>
    <inlineHelpText>Legal name from sub doc to be entered while closing the opportunity</inlineHelpText>
    <label>Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>