PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Likelyhood__c.field-meta.xml
<CustomField>
    <fullName>Likelyhood__c</fullName>
    <description>BAM Finance</description>
    <inlineHelpText>Rating of performance.  5-exceptional, 3-default, 1-poor</inlineHelpText>
    <label>Performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
                <default>true</default>
                <label>3</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>