PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Mandate_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Expiry__c</fullName>
    <label>Mandate Expiry</label>
    <type>Date</type>
</CustomField>