PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Mandate_Signed__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Signed__c</fullName>
    <label>Mandate Signed</label>
    <type>Date</type>
</CustomField>