PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Meeting_Held_Formula__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Held_Formula__c</fullName>
    <description>A formula that evaluates all meeting related fields and stages and is ticked if anyn of these conditions are met</description>
    <formula>or(
Not(isblank(Date_of_Last_Meeting_with_Investment_Tea__c)),
Not(isblank(text(Meeting_Held__c ))),
Not(isblank(IC_Meeting__c)),
Not (isblank(Data_Room_Access_Provided__c)),
Not(isblank(Data_Room_Last_Accessed__c)),
(PFG_Number_of_Meetings__c)&gt;0,
Contains(&quot;3:4:5:6:7&quot;,Stage_Prior_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFG Meeting Held - Formula</label>
    <type>Checkbox</type>
</CustomField>