PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Min_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Amount__c</fullName>
    <inlineHelpText>Enter in the full dollar amount</inlineHelpText>
    <label>Min Amount (Tracker)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>