PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/NAV__c.field-meta.xml
<CustomField>
    <fullName>NAV__c</fullName>
    <description>Quarterly NAV</description>
    <label>NAV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>