PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Next_Step_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Tracker__c</fullName>
    <description>for CRM to track their next steps</description>
    <inlineHelpText>for CRM to track their next steps</inlineHelpText>
    <label>CRM Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>