PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Notable_Accomplishments__c.field-meta.xml
<CustomField>
    <fullName>Notable_Accomplishments__c</fullName>
    <label>Notable Accomplishments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blank</fullName>
            </value>
            <value>
                <fullName>Selected as Finalist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>