PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>