PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Office_City__c.field-meta.xml
<CustomField>
    <fullName>Office_City__c</fullName>
    <label>Office City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Office_Country__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Brisbane</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Hong Kong</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Melbourne</fullName>
            </value>
            <value>
                <fullName>Montreal</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Munich</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro</fullName>
            </value>
            <value>
                <fullName>Sao Paulo</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>Vancouver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>