PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Open_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Open_Meetings__c</fullName>
    <description>Roll up to track if their are meeting notes that need to be entered</description>
    <inlineHelpText>Roll up to track if their are meeting notes that need to be entered</inlineHelpText>
    <label>Open Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>