PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Opportunity_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Highlights__c</fullName>
    <description>Summary of the opportunity, maximum 600 characters</description>
    <inlineHelpText>Summary of the opportunity, maximum 600 characters</inlineHelpText>
    <label>Opportunity Highlights</label>
    <length>700</length>
    <type>LongTextArea</type>
</CustomField>