PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/OpportunityExternalID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityExternalID__c</fullName>
    <externalId>true</externalId>
    <label>OpportunityExternalID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>