PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PE_Priority__c.field-meta.xml
<CustomField>
    <fullName>PE_Priority__c</fullName>
    <description>Private Equity field_ Highly used in reports</description>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Priority 1</fullName>
            </value>
            <value>
                <fullName>Priority 2</fullName>
            </value>
            <value>
                <fullName>Priority 3</fullName>
            </value>
            <value>
                <fullName>Priority 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>