PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_Data_Room_Access_Provided__c.field-meta.xml
<CustomField>
    <fullName>PFG_Data_Room_Access_Provided__c</fullName>
    <formula>if(and ( RecordType.Name =&quot;PFG&quot;,
   or(
      Data_Room_Access_Provided_auto__c=TRUE,

      Contains(text(StageName),&quot;4&quot;),
      Contains(text(StageName),&quot;5&quot;),
      Contains(text(StageName),&quot;6&quot;),
      Contains(text(StageName),&quot;7&quot;),
      Contains(text(StageName),&quot;8&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;4&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;5&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;6&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;7&quot;))),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFG Data Room Access Provided</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>