PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_First_Investment_Quarter__c.field-meta.xml
<CustomField>
    <fullName>PFG_First_Investment_Quarter__c</fullName>
    <description>Quarter in which the first investment made</description>
    <formula>IF(ISBLANK( Account.PFG_Date_of_first_Commitment__c ), &quot;&quot;, TEXT(YEAR( Account.PFG_Date_of_first_Commitment__c)) + &quot; Q&quot; + TEXT(CEILING( MONTH ( Account.PFG_Date_of_first_Commitment__c) / 3 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula filed pulling the quarter from Account</inlineHelpText>
    <label>PFG First Investment - Quarter</label>
    <type>Text</type>
</CustomField>