PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_Last_or_Upcoming_Activity_Date_N__c.field-meta.xml
<CustomField>
    <fullName>PFG_Last_or_Upcoming_Activity_Date_N__c</fullName>
    <description>PFG last or upcoming meeting/call/email date</description>
    <formula>IF( BLANKVALUE(PFG_Latest_or_Upcoming_Activity_Date__c, Today() - 10000) &gt; BLANKVALUE(PFG_Last_or_Upcoming_Event_Date__c, Today()-10000) , PFG_Latest_or_Upcoming_Activity_Date__c, PFG_Last_or_Upcoming_Event_Date__c)</formula>
    <inlineHelpText>PFG last or upcoming meeting/call/email date</inlineHelpText>
    <label>PFG Last or Upcoming Activity Date N</label>
    <type>Date</type>
</CustomField>