PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_Last_or_Upcoming_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>PFG_Last_or_Upcoming_Event_Date__c</fullName>
    <description>PFG Last meeting date roll up</description>
    <inlineHelpText>PFG Last meeting date roll up</inlineHelpText>
    <label>PFG Last or Upcoming Event Date</label>
    <type>Date</type>
</CustomField>