PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_No_of_Calls_Emails_Last_1Month__c.field-meta.xml
<CustomField>
    <fullName>PFG_No_of_Calls_Emails_Last_1Month__c</fullName>
    <description>roll up to count the number of PFG tasks if the Last 1 Month box is ticked</description>
    <inlineHelpText>roll up to count the number of PFG tasks if the Last 1 Month box is ticked</inlineHelpText>
    <label>PFG No. of Calls/Emails - Last 1Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>