PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_Number_of_Calls_Emails_LTM__c.field-meta.xml
<CustomField>
    <fullName>PFG_Number_of_Calls_Emails_LTM__c</fullName>
    <description>roll up to count the number of PFG tasks if the LTM box is ticked</description>
    <inlineHelpText>roll up to count the number of PFG tasks if the LTM box is ticked</inlineHelpText>
    <label>PFG Number of Calls/ Emails - LTM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>