PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_Number_of_Meetings_Last_1_Month__c.field-meta.xml
<CustomField>
    <fullName>PFG_Number_of_Meetings_Last_1_Month__c</fullName>
    <description>roll up to count the number of PFG meetings if the Last 1 Month box is ticked</description>
    <inlineHelpText>roll up to count the number of PFG meetings if the Last 1 Month box is ticked</inlineHelpText>
    <label>PFG Number of Meetings - Last 1 Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>