PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_Number_of_Meetings_YTD__c.field-meta.xml
<CustomField>
    <fullName>PFG_Number_of_Meetings_YTD__c</fullName>
    <description>roll up to count the number of PFG meetings if the YTD box is ticked</description>
    <inlineHelpText>roll up to count the number of PFG meetings if the YTD box is ticked</inlineHelpText>
    <label>PFG Number of Meetings - YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>