PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_of_Meetings_new__c.field-meta.xml
<CustomField>
    <fullName>PFG_of_Meetings_new__c</fullName>
    <description>PFG total # of meetings for review</description>
    <inlineHelpText>PFG total # of meetings for review</inlineHelpText>
    <label>PFG # of Meetings All time new</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>