PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PFG_Prospect_Reached_Out__c.field-meta.xml
<CustomField>
    <fullName>PFG_Prospect_Reached_Out__c</fullName>
    <formula>if(and ( RecordType.Name =&quot;PFG&quot;,
   or(
      
(PFG_Number_of_Meetings__c)&gt;0,
( PFG_of_Calles_Emails__c)&gt;0,

      Contains(text(StageName),&quot;2&quot;),
      Contains(text(StageName),&quot;3&quot;),
      Contains(text(StageName),&quot;4&quot;),
      Contains(text(StageName),&quot;5&quot;),
      Contains(text(StageName),&quot;6&quot;),
      Contains(text(StageName),&quot;7&quot;),
      Contains(text(StageName),&quot;8&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;2&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;3&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;4&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;5&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;6&quot;),
Contains(text( Previous_Stage_before_close__c),&quot;7&quot;))),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PFG Prospect Reached Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>