PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Pitch_Date__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Date__c</fullName>
    <label>Pitch Date</label>
    <type>Date</type>
</CustomField>