PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PPM_Last_Sent__c.field-meta.xml
<CustomField>
    <fullName>PPM_Last_Sent__c</fullName>
    <label>PPM Last Sent</label>
    <type>Date</type>
</CustomField>