PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Priority_Co_Investor_Concatenated__c.field-meta.xml
<CustomField>
    <fullName>Priority_Co_Investor_Concatenated__c</fullName>
    <description>Concatenated value of priority co-investor and investment vehicle name</description>
    <formula>if(isblank(text( Priority_Co_investor_Text__c )),Null,Investment_Vehicle__r.Name +&quot; - &quot;+text( Priority_Co_investor_Text__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Concatenated value of priority co-investor and investment vehicle name</inlineHelpText>
    <label>Priority Co-Investor Concatenated</label>
    <type>Text</type>
</CustomField>