PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Priority_Co_investor_Text__c.field-meta.xml
<CustomField>
    <fullName>Priority_Co_investor_Text__c</fullName>
    <label>Priority Co-investor Text</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
            </value>
            <value>
                <fullName>Expressed Interest</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>