PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark the Opportunity as Private making it visible to only the Opportunity Owner and Opportunity Team Members</description>
    <inlineHelpText>Check this box to make it private to all users except the Opportunity Owner and the Opportunity Team Members</inlineHelpText>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>