PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Processes__c.field-meta.xml
<CustomField>
    <fullName>Processes__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auction</fullName>
            </value>
            <value>
                <fullName>Proprietary</fullName>
            </value>
            <value>
                <fullName>P2P</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>