PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Proposed_LPAC_Status__c.field-meta.xml
<CustomField>
    <fullName>Proposed_LPAC_Status__c</fullName>
    <inlineHelpText>Will they be part of the Limited Partner Advisory Committee?</inlineHelpText>
    <label>Proposed LPAC Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Observer</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>