PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PSG_Consultant_Ratings_for_Account__c.field-meta.xml
<CustomField>
    <fullName>PSG_Consultant_Ratings_for_Account__c</fullName>
    <formula>IF( 
   AND ( NOT(ISBLANK(PSG_Strategy__c)),
         NOT(ISBLANK(PSG_Rating__c ))),  PSG_Strategy__c +  &quot; : &quot; + PSG_Rating__c , 
   IF ( NOT(ISBLANK(PSG_Strategy__c)), PSG_Strategy__c , 
      IF ( NOT(ISBLANK(PSG_Rating__c )), PSG_Rating__c, 
          &quot;&quot;
         )
      )
)</formula>
    <label>PSG Consultant Ratings for Account</label>
    <type>Text</type>
</CustomField>