PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/PSG_Strategy__c.field-meta.xml
<CustomField>
    <fullName>PSG_Strategy__c</fullName>
    <formula>TEXT(Investment_Vehicle__r.BIM_Strategy__c)</formula>
    <label>PSG Strategy</label>
    <type>Text</type>
</CustomField>