PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>