PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Rating_Details__c.field-meta.xml
<CustomField>
    <fullName>Rating_Details__c</fullName>
    <description>Rating details to add for the Rating value chosen</description>
    <label>Rating Details</label>
    <length>25</length>
    <type>Text</type>
</CustomField>