PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/RE_Stage_Sort__c.field-meta.xml
<CustomField>
    <fullName>RE_Stage_Sort__c</fullName>
    <formula>IF(
ISPICKVAL( StageName ,&quot;7: Closed&quot;),&quot;0:Closed&quot;,IF(
ISPICKVAL( StageName ,&quot;Soft Decline&quot;),&quot;8:Soft Decline&quot;,
IF(ISPICKVAL( StageName ,&quot;Firm Decline&quot;),&quot;9:Firm Decline&quot;,Text(StageName))))</formula>
    <label>RE Stage Sort</label>
    <type>Text</type>
</CustomField>