PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Real_Estate__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate__c</fullName>
    <label>Real Estate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Development Land</fullName>
            </value>
            <value>
                <fullName>Health Care</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Master Residential Development</fullName>
            </value>
            <value>
                <fullName>Multi-Family - For Rent</fullName>
            </value>
            <value>
                <fullName>Multi-Family - For Sale</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Senior Housing</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>