PROD-12-18-19/force-app/main/default/objects/Opportunity/fields/Reason_for_Decline__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Decline__c</fullName>
    <description>Reason the Opportunity was lost</description>
    <inlineHelpText>Reason the Opportunity was lost</inlineHelpText>
    <label>Reason for Decline</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>No Capital/Allocation</fullName>
            </value>
            <value>
                <fullName>Strategy - Asset mix/Geo/Cap Target</fullName>
            </value>
            <value>
                <fullName>Strategy - Target Returns</fullName>
            </value>
            <value>
                <fullName>Strategy - Investment Method</fullName>
            </value>
            <value>
                <fullName>Strategy - Tax</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Brookfield - Legal</fullName>
            </value>
            <value>
                <fullName>Brookfield - Management Team</fullName>
            </value>
            <value>
                <fullName>Brookfield - Track Record/Returns</fullName>
            </value>
            <value>
                <fullName>Brookfield - Structure</fullName>
            </value>
            <value>
                <fullName>Re-Invest with existing Fund Mgrs</fullName>
            </value>
            <value>
                <fullName>Invested with Competitor</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Timing</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Volatility</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Did not proceed</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Credit Quality</fullName>
            </value>
            <value>
                <fullName>Operational Expertise</fullName>
            </value>
            <value>
                <fullName>Did not Bid</fullName>
            </value>
            <value>
                <fullName>Sector</fullName>
            </value>
            <value>
                <fullName>Brookfield Allocation Limit</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>Tax Issues</fullName>
            </value>
            <value>
                <fullName>Issue with Manager</fullName>
            </value>
            <value>
                <fullName>Fund Size</fullName>
            </value>
            <value>
                <fullName>Track Record</fullName>
            </value>
            <value>
                <fullName>Uncompetitive Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>